# abstract-machines

./: DRAFT.md  README.md  index.html  sem.rkt
absint-tutor/: 01-galois-connections.md  02-widening-narrowing.md  03-domain-extension.md  README.md
analyses/: ideas.hs  interval.hs
cek/: cek.cabal  package.yaml
cek/src/: Lib.hs
cesk/: cek.cabal
cesk-anf/: CHANGELOG.md  README.md  cesk.cabal  package.yaml
cesk-anf/src/: Lib.hs
cesk-star/: main.rkt
cesk-star-timestamp/: main.rkt
cesk/src/: Lib.hs
cls/: README.md  dune-project
cls/_build/: .db  .digest-db  log
cls/lib/: dune
cls/test/: dune
cls_draft/: dune-project
cls_store/: dune-project
cls_store/_build/: .db  .digest-db  log
cls_store/_build/default/.dune/: configurator.v2
cls_store/_build/default/lib/: cls_store.cmxa
cls_store/_build/default/lib/.cls_store.objs/byte/: cls_store.cmi  cls_store.cmo  cls_store.cmt
cls_store/_build/default/lib/.cls_store.objs/native/: cls_store.cmx
cls_store/_build/default/lib/.merlin-conf/: lib-cls_store
cls_store/lib/: dune
cls_store/test/: dune
concrete/: README.md
concrete-tapl/: README.md
concrete-tapl/lambdacalc/: lambdacalc.cabal  package.yaml
concrete/lambdacalc/: CHANGELOG.md  README.md
concrete/simplebool-lambdacalc/: .gitignore  Makefile  README.md
docs/: index.html
references/: cek.hs  cek.lean  ekmett-cek.hs  matt-cek.hs
use-redex-dsl/: aam-lab.rkt  cek.rkt  lab.rkt  lab1-metafn.rkt  lab2-red.rkt  lab3-typ.rkt  lab4-stores.rkt  tut.rkt
use-redex-dsl/starter/: common.rkt  extend-lookup.rkt  fv.rkt  subtract.rkt  (+1 more)
(+21 files in other folders)
